# etf-quant-v2

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_TEMPLATE.md  CONTRIBUTING.md  LICENSE  MEMORY.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  feature.yml  feature_request.md
configs/: c21_strategy.json
docs/: ARCHITECTURE.md  AUDIT_REPORT_20260620.md  DATA_DICTIONARY.md  DEV_NOTE_SPRINT6_US013.md  EXECUTION_REFACTOR_DESIGN.md  FAQ.md  INTERFACE_CONTRACT.md  ITERATION_PLAN_20260623.md  MIGRATION_GUIDE.md  MISSION_FINAL_REPORT_20260620.md  MISSION_FINAL_REPORT_20260621.md  MISSION_FINAL_REPORT_20260623.md  NEW_USER_FEEDBACK_REPORT.md  NEW_USER_GUIDE.md  NEW_USER_GUIDE_INVESTOR.md  PRD.json  PRD.md  RELEASE_NOTES.md  ROADMAP_v3.md  SKILL_ROUTING_AUDIT_20260620.md  SKILL_USER_GUIDE.md  SOP_01_DATA.md  SOP_02_REFACTOR_DEV.md  SOP_03_EXPERIMENT.md  SOP_04_DATASOURCE.md  SOP_05_BACKUP.md  SOP_06_DESENSITIZE.md  SOP_07_MISSION.md  SOP_08_REVIEW.md  SOP_INDEX.md  SPRINT4_PRE_RESEARCH.md  SPRINT5_RELEASE.md  SPRINT5_US030_CORRECTION.md  SPRINT6_PRE_RESEARCH.md  SPRINT6_US013_DESIGN.md  SPRINT6_US013_SELF_REVIEW.md  SPRINT7_PRE_RESEARCH.md  SPRINT8_D013_DESIGN.md  SPRINT_REVIEW_TEMPLATE.md  TEACHING_FRAMEWORK.md  (+2 more)
scripts/: check_ic_decay.py  demo_full_flow.py  eval_60min_factors.py  fetch_60min_data.py  init_database.py  migrate_v1_to_v2.py  poc_backtesting.py  run_and_log.sh  run_factor_evaluation.py  run_real_backtest.py  run_unit_tests.sh  update_core_etf_data.py  腐化自检.py
tests/: conftest.py
(+193 files in other folders)
